<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303030"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".AddFilesActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/addBtnSelect"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/mybutton"
            android:text="@string/btn_select"
            android:textSize="16sp"
            tools:ignore="InefficientWeight,TextContrastCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <ListView
        android:id="@+id/addLvwFiles"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fadeScrollbars="false"
        android:scrollbarStyle="insideInset"
        android:scrollbarThumbVertical="@drawable/custom_scrollbar"
        android:divider="#7FBEBEBE"
        android:dividerHeight="1dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addBtnRemoveAll"
                android:layout_width="170dp"
                android:layout_height="35dp"
                android:layout_weight="0.4"
                android:background="@drawable/mybutton"
                android:text="@string/add_btn_remove_all"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/addBtnRemove"
                android:layout_width="170dp"
                android:layout_height="35dp"
                android:layout_weight="0.4"
                android:background="@drawable/mybutton"
                android:text="@string/add_btn_remove"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addTxvTotalSize"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/add_txv_total_size"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/addEtxTotalSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:ems="10"
                android:hint="@string/add_etx_total_size_hint"
                android:textColorHint="@color/hintColor"
                android:importantForAutofill="no"
                android:inputType="none"
                android:labelFor="@id/addTxvTotalSize"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:ignore="DuplicateSpeakableTextCheck,TextFields,TouchTargetSizeCheck" />

            <Spinner
                android:id="@+id/addSprTotalSize"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:contentDescription="@string/add_spr_total_size_description"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addBtnCancel"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/mybutton"
                android:text="@string/add_btn_cancel"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <Button
                android:id="@+id/addBtnConfirm"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/mybutton"
                android:text="@string/add_btn_confirm"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>